# testing_ground

./: .gitignore  .readme  README.md  pyproject.toml
notebooks/: 01_data_cleaning.ipynb  02_multilingual_targeted_values_crawler.ipynb  03_scrap.ipynb  Notebook_2_updated.ipynb  notebook_2_values_crawler.ipynb
src/: main.py
src/country_values_distance/: __main__.py  avail_check.py  cleaning.py  cli.py  config.py  contracts.py  crawler.py  domains.py  homepage_fetch.py  io.py  links.py  pipeline.py  robots.py  sampling.py  selection.py  semantics.py  translation.py  web.py
tests/unit/: test_availability.py  test_cleaning.py  test_cli.py  test_contracts.py  test_domains.py  test_notebook02_migration.py  test_pipeline.py  test_prepare_companies_summary.py  test_run_all_integration.py  test_sampling.py  test_stage_modules.py
