[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country-values-distance"
version = "0.1.0"
description = "Pipeline for collecting and analysing company values by country."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0,<2.3.0",
    "httpx>=0.27.0,<0.28.0",
    "beautifulsoup4>=4.12.0,<4.13.0",
    "lxml>=5.0.0,<5.1.0",
    "tldextract>=5.1.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
country-values-distance = "country_values_distance.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]