[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country-values-distance"
version = "0.1.0"
description = "Pipeline for collecting and analysing company values by country."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "tldextract>=5.1.0,<6.0.0",
    "torch>=2.1.0,<3.0.0",
    "sentence-transformers>=3.0.0,<6.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "pycountry>=24.6.1,<27.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
country-values-distance = "country_values_distance.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
